--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-vfbU7ZuZtd2xl0wOP5RqF5bCgAegSNNJ1IT0O7uBUHErLMYG+1yQD00lJ71fKYtEmm+8APc2bQAe5y4U5brRlg==" crossorigin="anonymous" />
+
 </head>
 <body>
     <div class="container">
@@ -45,6 +47,9 @@
                 Nesciunt debitis eaque minima quos saepe. Quos quam obcaecati optio sequi? 
                 Commodi, sunt atque! Quasi eligendi itaque dignissimos repellat.</p>
         </div>
+        <!-- <div class="box">
+            <div class="facebook"><i class="fab fa-facebook-square"></i></i></div>
+        </div> -->
     </div>
 </body>
 </html>
